Enhance UI components and styles across the application. Added BottomSpacer to index.mdx, updated table styles in CommonTable, adjusted font sizes and dimensions in mobileDocSidebarContent and mobileIntegration CSS, and improved mobile navbar logo handling. Introduced new styles for mobile Table of Contents in custom.css.

--- a/react-ui-kits/overview/index.mdx
+++ b/react-ui-kits/overview/index.mdx
@@ -86,6 +86,7 @@ The CometChat React UI Kit is developed to keep developers in mind and aims to r
   src={ReactUIKitImg}
   alt="React UI Kit"
 />
+<BottomSpacer spacing={25}/>
 
 The UI Kit’s customizable UI components simplify the process of integrating text chat and voice/video calling features to your website or mobile application in a few minutes.
 <div style={{display: 'flex', boxShadow: '0 0 4px 0 rgb(0 0 0 / 18%)', borderRadius: '3px'}}>
