Refactor Docusaurus configuration to streamline documentation structure. Removed deprecated index.mdx files and adjusted sidebar settings for React UI Kit. Enhanced versioning support and updated theme configurations for improved user experience.

--- a/react-kit_versioned_docs/version-1.0/overview/index.mdx
+++ b/react-kit_versioned_docs/version-1.0/overview/index.mdx
@@ -51,7 +51,6 @@ function UsersDemo() {
 export default UsersDemo;
 `;
 
-# Overview
 
 The UI Kit comprises a variety of components, each designed to work seamlessly with one another to deliver a comprehensive and intuitive chat experience.
 
@@ -59,7 +58,7 @@ The UI Kit comprises a variety of components, each designed to work seamlessly w
 
 ---
 
-## 1. Getting Started
+## 1. Getting Started skjdhfksjdh
 
 ### 1.1 Step-by-step Setup
 
